--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb+srv://chandan:zummit@cluster0.ytcw48z.mongodb.net/
+DATABASE_URL=mongodb+srv://zummit:chandan@zummit.qugadqr.mongodb.net/
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=chandan
