--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=mongodb+srv://zummit:chandan@zummit.qugadqr.mongodb.net/
-PORT=5000
+# PORT=5000
 NODE_ENV=development
 JWT_SECRET=chandan
