--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ DATABASE_URL=mongodb+srv://zummit:chandan@zummit.qugadqr.mongodb.net/
 # PORT=5000
 NODE_ENV=development
 JWT_SECRET=chandan
+MYSQL_USERNAME=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=zummit
+MYSQL_PORT=3306
